# deathpush

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE  PLAN-TODO.md  README.md  THIRD-PARTY-LICENSES.md  TODO.md  index.html  justfile  oxlintrc.json  package-lock.json  package.json  test-notification.sh  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy-website.yml  publish.yml
DeathPush/: AGENTS.md  TODO.md
DeathPush/Bridge/FFI/: DeathPushFFI.h  deathpush_coreFFI.h
DeathPush/DeathPush/: ContentView.swift  DeathPushApp.swift  Info.plist
DeathPush/DeathPush.xcodeproj/: project.pbxproj
DeathPush/DeathPush/App/: AppState.swift  DateFormatters.swift  TabRegistry.swift  TabState.swift
DeathPush/DeathPush/AppIcon.icon/: icon.json
DeathPush/DeathPush/Bridge/: DeathPush-Bridging-Header.h
DeathPush/DeathPush/Services/: AppUpdater.swift  CLIInstaller.swift  EventBridge.swift  GitOutputService.swift  IconThemeService.swift  RepositoryService.swift  TerminalService.swift  ThemeService.swift
DeathPush/Resources/IconThemes/: material-icon-theme.json
DeathPush/Resources/Monaco/: diff-bridge.js  editor-bridge.js  editor.html  index.html
DeathPush/scripts/: build-rust.sh  bundle-monaco.sh  copy-icon-themes.sh  copy-monaco.sh  create-dmg.sh  dp  generate-bindings.sh  install-cli.sh  notarize.sh  sparkle-sign.sh
assets/screenshots/: mockups.html
crates/deathpush-core/: Cargo.toml
crates/deathpush-core/src/: error.rs  events.rs  lib.rs  terminal.rs  types.rs
crates/deathpush-core/src/git/: blame.rs  branch.rs  cli.rs  diff.rs  hunk.rs  log.rs  mod.rs  repo_state.rs  repository.rs  status.rs  tag.rs  watcher.rs
crates/deathpush-ffi/: Cargo.toml  uniffi.toml
crates/deathpush-ffi/src/: bridge.rs  lib.rs  session.rs
crates/deathpush-ffi/src/commands/: blame.rs  branch.rs  commit.rs  config.rs  explorer.rs  file_ops.rs  lifecycle.rs  log.rs  mod.rs  remote.rs  repository.rs  staging.rs  stash.rs  status.rs  tag.rs  terminal.rs
docs/superpowers/plans/: 2026-03-12-p0-p1-workflow.md
src/: app.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/metainfo/: com.deathpush.app.metainfo.xml
src-tauri/scripts/: dp-linux
src-tauri/src/: error.rs  lib.rs  main.rs  pty.rs  shell_env.rs  types.rs  util.rs
src-tauri/src/commands/: blame.rs  branch.rs  cli.rs  commit.rs  config.rs  explorer.rs  file_ops.rs  lifecycle.rs  log.rs  mod.rs  remote.rs  repository.rs  staging.rs  stash.rs  status.rs  tag.rs  terminal.rs
src-tauri/src/git/: blame.rs  branch.rs  cli.rs  diff.rs  hunk.rs  log.rs  mod.rs  repo_state.rs  repository.rs  status.rs  watcher.rs
src/components/branch/: branch-item.tsx  branch-picker.tsx  tag-item.tsx
src/components/diff/: diff-header.tsx  diff-viewer.tsx  empty-state.tsx  image-diff.tsx
src/components/explorer/: explorer-item.tsx  explorer-tree.tsx  explorer-view.tsx
src/components/file-viewer/: file-viewer.tsx
src/components/history/: commit-detail.tsx  commit-file-tree.tsx  commit-list.tsx  history-view.tsx
src/components/layout/: app-layout.tsx  clone-dialog.tsx  licenses-modal.tsx  linux-title-bar.tsx  main-panel.tsx  sidebar-view.tsx  status-bar.tsx  title-bar.tsx
src/components/quick-open/: quick-open.tsx
src/components/scm/: action-button.tsx  commit-input.tsx  context-menu.tsx  file-filter.tsx  merge-banner.tsx  overflow-menu.tsx  resizable-pane-container.tsx  resource-group.tsx  resource-item.tsx  resource-tree.tsx  scm-toolbar.tsx  scm-view.tsx  stash-entry.tsx  stash-view.tsx  sub-repos-view.tsx
src/components/settings/: settings-page.tsx
src/components/shared/: workspace-config-modal.tsx
src/components/terminal/: git-output.tsx  terminal-group-view.tsx  terminal-instance.tsx  terminal-panel.tsx  terminal-search-bar.tsx
src/components/theme/: icon-theme-picker.tsx  theme-picker.tsx
src/components/ui/: spinner.tsx
src/components/welcome/: welcome-screen.tsx
src/hooks/: use-branches.ts  use-color-scheme.ts  use-commit-log.ts  use-diff.ts  use-explorer-git-status.ts  use-git-status.ts  use-keyboard-shortcuts.ts  use-repository.ts  use-resize-observer.ts  use-stash.ts  use-tags.ts  use-tauri-event.ts
src/lib/: author-utils.test.ts  author-utils.ts  constants.ts  diff-options.test.ts  diff-options.ts  flat-file-list.test.ts  flat-file-list.ts  format-date.test.ts  format-date.ts  git-types.ts  monaco-setup.ts  platform.ts  recent-files.test.ts  recent-files.ts  recent-projects.test.ts  recent-projects.ts  status-colors.test.ts  status-colors.ts  status-icons.test.ts  status-icons.ts  tauri-commands.ts  throttle.test.ts  throttle.ts  toggle-terminal.ts  updater.ts  workspace-tree.test.ts  workspace-tree.ts
src/lib/icon-themes/: apply-icon-theme.ts  generate-icon-css.test.ts  generate-icon-css.ts  get-icon-classes.test.ts  get-icon-classes.ts  icon-theme-registry.ts  icon-theme-types.ts
src/lib/languages/: dotenv.ts  justfile.ts  toml.ts
src/lib/themes/: apply-theme.test.ts  apply-theme.ts  defaults.ts  theme-registry.test.ts  (+2 more)
src/stores/: explorer-store.ts  icon-theme-store.ts  layout-store.test.ts  layout-store.ts  repository-store.test.ts  repository-store.ts  settings-store.test.ts  settings-store.ts  theme-store.ts
src/styles/: codicons.css  explorer.css  global.css  history.css  repositories.css  scm.css  settings.css  terminal.css  welcome.css
website/: astro.config.mjs  package-lock.json  package.json
website/public/: humans.txt  llms-full.txt  llms.txt  site.webmanifest
(+76 files in other folders)
