[package]
name = "deathpush"
version = "0.1.2"
description = "A desktop Git client inspired by VS Code Source Control"
authors = ["felipefdl"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85.0"

[features]
devtools = ["tauri/devtools"]

[lib]
name = "deathpush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
chrono = "0.4"
git2 = { version = "0.20", features = ["vendored-openssl"] }
notify = "7"
notify-debouncer-mini = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
thiserror = "2"
tracing = "0.1"
trash = "5"
tracing-subscriber = "0.3"
base64 = "0.22"
md5 = "0.7"
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
url = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
