[package]
name = "deathpush"
version = "0.2.1"
description = "A desktop Git client inspired by VS Code Source Control"
authors = ["felipefdl"]
license = "Apache-2.0"
edition.workspace = true
rust-version.workspace = true

[features]
devtools = ["tauri/devtools"]

[lib]
name = "deathpush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
deathpush-core = { path = "../crates/deathpush-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
chrono = { workspace = true }
git2 = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
trash = { workspace = true }
nucleo-matcher = { workspace = true }
tracing-subscriber = "0.3"
base64 = { workspace = true }
md5 = { workspace = true }
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
url = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
